<resources>
    <string name="app_name">Actividad11</string>
    <string name="edad">Edad</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="telefono">Telefono</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Genero</string>
    <string name="relativelayout">RelativeLayout</string>
    <string name="constraintlayout">ConstraintLayout</string>
    <string name="linearlayout">LinearLayout</string>
</resources>