<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="415dp"
        android:layout_height="730dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/apellido"
                android:inputType="text" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/editTextNumberDecimal"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/edad"
                android:inputType="numberDecimal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/usuario"
                android:inputType="text" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/contraseña"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="33dp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="41dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/genero"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="178dp"
                android:layout_height="wrap_content">


                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="175dp"
                    android:layout_height="79dp"
                    android:text="@string/masculino" />


                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="176dp"
                    android:layout_height="86dp"
                    android:text="@string/femenino" />


            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="33dp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/enviar" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="59dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relativelayout" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/constraintlayout" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>